# fastapitask

./: .env_sample  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
auth/: auth.py
config/: database.py
models/: candidates.py  users.py
routes/: candidate_routes.py  home_routes.py  user_routes.py
tests/: test_auth.py  test_candidate_routes.py  test_main.py  test_user_routes.py
utils/: utils.py
